refactor(trim): 优化修剪选择策略中的代码实现
- 移除未使用的 SELECTION_TOLERANCE 常量定义
- 使用 removeLast() 方法替代索引计算方式移除列表最后一个元素
- 简化了闭合路径检测后的列表操作逻辑